scene_to can be NULL and cause segfault #52332

Closed
opened 2017-08-10 12:35:04 +02:00 by Sybren A. Stüvel · 6 comments

System Information
Ubuntu Linux 16.04

Blender Version
Broken: 9da7dfa15
Worked: 580741b317

Short description of error
Duplicating a sequencer strip causes a segfault

Exact steps for others to reproduce the error

  1. Add an adjustment layer effect strip (or a color strip, text strip, whatever strip)
  2. Hit Shift+D
  3. Segfault

The problem lies in sequencer.c:5541. The line used to call BKE_sequencer_active_set(scene, seqn);, but since 9da7dfa15 it calls BKE_sequencer_active_set(scene_to, seqn);. This is a problem, since scene_to can be NULL (for example, see the call in sequencer_add_duplicate_exec(...), but there are other places).

Since scene is const, and BKE_sequencer_active_set() expects a non-const pointer, it's not trivially possible to just pass scene instead of scene_to. Maybe calling BKE_sequence_base_dupli_recursive(scene, scene, ... instead of (scene, NULL, ... is enough?

**System Information** Ubuntu Linux 16.04 **Blender Version** Broken: 9da7dfa15 Worked: 580741b317ae60eb3 **Short description of error** Duplicating a sequencer strip causes a segfault **Exact steps for others to reproduce the error** 1. Add an adjustment layer effect strip (or a color strip, text strip, whatever strip) 2. Hit Shift+D 3. Segfault The problem lies in `sequencer.c:5541`. The line used to call `BKE_sequencer_active_set(scene, seqn);`, but since 9da7dfa15 it calls `BKE_sequencer_active_set(scene_to, seqn);`. This is a problem, since `scene_to` can be `NULL` (for example, see the call in `sequencer_add_duplicate_exec(...)`, but there are other places). Since `scene` is const, and `BKE_sequencer_active_set()` expects a non-const pointer, it's not trivially possible to just pass `scene` instead of `scene_to`. Maybe calling `BKE_sequence_base_dupli_recursive(scene, scene, ...` instead of `(scene, NULL, ...` is enough?

#52335 was marked as duplicate of this issue

#52335 was marked as duplicate of this issue
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Bastien Montagne was assigned by Sybren A. Stüvel 2017-08-10 12:36:27 +02:00

This issue was referenced by ca3f601f93

This issue was referenced by ca3f601f9372f08b1772d6dfa04dbc85c96ea8c9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @Ebone

Added subscriber: @Ebone
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52332
No description provided.